Fixed spacing isses on time text and bug where user can press choice twice.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,3 +27,10 @@ body{
   white-space: nowrap;
   padding-right: 1vw;
 }
+@media only screen and (max-width: 992px) {
+    #countdown{
+     padding-right: 0;
+     margin-right: -35% !important;
+   }
+
+}
